--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <html>
+
 <head>
-    <link rel="stylesheet" href="./styles.css"/>
+    <link rel="stylesheet" href="./styles.css" />
     <script src="index.js" defer></script>
 
 </head>
+
 <body>
-    <form class="add">
-        <input type="text" placeholder="add description" class="add__input" />    
-        <button type="submit" class="add__button">
-            Add
-        </button>
-    </form>
+    <div class="content">
+        <form class="add">
+            <input type="text" placeholder="add description" class="add__input" />
+            <button type="submit" class="add__button">
+                Add
+            </button>
+        </form>
+        <div class="tasks" id="task-list">
+        </div>
+    </div>
 </body>
+
 </html>
