added js to add tasks

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <body>
     <div class="content">
-        <form class="add">
-            <input type="text" placeholder="add description" class="add__input" />
+        <form class="add" id="add-task">
+            <input type="text" placeholder="add description" class="add__input" name="description"/>
             <button type="submit" class="add__button">
                 Add
             </button>
