added logic to render tasks by filter

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <div class="content">
         <div class="filters">
-            <button class="filter__option">
+            <button class="filter__option" data-filter="all">
                 All
             </button>
-            <button class="filter__option">
+            <button class="filter__option" data-filter="active">
                 Active
             </button>
-            <button class="filter__option filter__option--active">
+            <button class="filter__option filter__option--selected" data-filter="completed">
                 Completed
             </button>
         </div>
